JJCDV domain page fixes (#14)
* Prevent carousel arrow overlap on quote carousel

* Add metadata to theme

* Add data indicators ACF options page

* Fix quote carousel styles

* Fix domain data rich text link style

* Domain subdomain data isn't required

* Limit width of images in domain rich text

* Revert "Add data indicators ACF options page"

This reverts commit 4e0e4f006eccbdab6c5b95ccb94a3965dbbba76d.

--- a/src/scss/domain.scss
+++ b/src/scss/domain.scss
@@ -125,6 +125,16 @@
 .domain__accordion-content {
   overflow: hidden;
   transition: height 0.2s;
+
+  a {
+    color: inherit;
+    text-decoration: underline;
+
+    &:focus,
+    &:hover {
+      color: $color-med-blue;
+    }
+  }
 }
 
 // Override too-broad table styles in lists.scss
