--- a/src/scss/quote-carousel.scss
+++ b/src/scss/quote-carousel.scss
@@ -9,4 +9,20 @@
   font-size: 26px;
   line-height: 1.6;
   font-weight: normal;
+  padding-right: 80px;
+  padding-left: 80px;
+  padding-top: 55px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-image: url('../images/icon--quote.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 55px;
+    height: 55px;
+  }
 }
